change to green deployment

--- a/guestbook-rollout/guestbook-rollout.yaml
+++ b/guestbook-rollout/guestbook-rollout.yaml
@@ -4,7 +4,7 @@ metadata:
   name: guestbook-ui
   namespace: default
 spec:
-  replicas: 3
+  replicas: 1
   revisionHistoryLimit: 2
   selector:
     matchLabels:
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: guestbook-ui
-          image: udemykcloud534/guestbook:blue
+          image: udemykcloud534/guestbook:green
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
