update to blue and turn of auto promtion

--- a/guestbook-rollout/guestbook-rollout.yaml
+++ b/guestbook-rollout/guestbook-rollout.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: guestbook-ui
-          image: udemykcloud534/guestbook:blue
+          image: udemykcloud534/guestbook:green
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
@@ -30,7 +30,7 @@ spec:
     blueGreen:
       activeService: guestbook-ui
       previewService: guestbook-ui-blue-green
-      autoPromotionEnabled: true
+      autoPromotionEnabled: false
       scaleDownDelaySeconds: 10
 ---
 apiVersion: v1
